Add additional auditing functionality

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -85,6 +85,8 @@ div.circ-small {
     font-family:monospace;
 }
 
+.datepicker {z-index: 1151 !important;}
+
 /* Override default calendar image locations */
 #cal-slide-content {
     padding : 20px;
