--- a/views/account.tt
+++ b/views/account.tt
@@ -24,35 +24,46 @@
     <h2>Graphs</h2>
     <div class="row">
         <div class="col-md-12">
-            <p>Use this page to configure what graphs are displayed on your home page. New
-            graphs can only be added by an administrator.</p>
-            <form role="form" method="post">
-                <table class="table table-striped dtable">
-                    <thead>
-                        <tr>
-                            <td>Select</th>
-                            <th>Name</th>
-                        </tr>
-                    </thead>
-                    </body>
-                        [% FOREACH graph IN graphs %]
+            [% IF graphs.size %]
+                <p>Use this page to configure what graphs are displayed on your home page. New
+                graphs can only be added by an administrator.</p>
+                <form role="form" method="post">
+                    <table class="table table-striped dtable">
+                        <thead>
                             <tr>
-                                <td>
-                            <div class="checkbox">
-                                    <input type="checkbox" name="graphs" value="[% graph.id %]"
-                                        [% IF graph.selected %]checked[% END %]
-                                    >
-                                </label>
-                            </div>
-                                </td>
-                                <td>
-                                    [% graph.title | html_entity %] ([% graph.type %])
-                                </td>
+                                <td>Select</th>
+                                <th>Name</th>
                             </tr>
-                        [% END %]
-                </table>
-                <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
-            </form>
+                        </thead>
+                        </body>
+                            [% FOREACH graph IN graphs %]
+                                <tr>
+                                    <td>
+                                <div class="checkbox">
+                                        <input type="checkbox" name="graphs" value="[% graph.id %]"
+                                            [% IF graph.selected %]checked[% END %]
+                                        >
+                                    </label>
+                                </div>
+                                    </td>
+                                    <td>
+                                        [% graph.title | html_entity %] ([% graph.type %])
+                                    </td>
+                                </tr>
+                            [% END %]
+                    </table>
+                    <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
+                </form>
+            [% ELSIF user.permission.layout %]
+                <p>
+                    No graphs have been created. Please visit <a href="/graph">Graphs</a> to create some.
+                </p>
+            [% ELSE %]
+                <p>
+                    No graphs have been created yet. Please contact an administrator to create some graphs.
+                    Once graphs have been created, you can select them from this page.
+                </p>
+            [% END %]
         </div>
     </div>
 [% END %]
