Link to Curval related record when viewing value

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -54,7 +54,7 @@
                         [% value %]
                         ">
                     </div>
-                [% ELSIF column.type == "string" %]
+                [% ELSIF column.type == "string" OR column.type == "curval" %]
                     <div class="more-less">
                         <div class="more-block">
                             <p>[% value.html_withlinks %]</p>
