Add typeahead functionality to the query builder
This extends the jQuery-QueryBuilder used on views/view.tt to use the
Bootstrap-3-Typeahead library:
https://github.com/bassjobsen/Bootstrap-3-Typeahead/

Currently GADS uses typeahead for Enum, Person and Tree fields.

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -204,6 +204,7 @@
         [% END %]
         [% IF page == "view" %]
             <script type="text/javascript" src="[% url.js %]/query-builder.js"></script>
+            <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
         [% END %]
         [% IF page == "data" AND viewtype == "calendar" %]
             <script type="text/javascript" src="[% url.js %]/calendar.min.js"></script>
