Fix sort arrow not appearing properly in data table

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -3,6 +3,7 @@
 <table class="table table-striped" id="datatable">
     <thead>
         <tr>
+            [% sort = sort.shift %]
             [% IF NOT sort.id AND sort.type == "asc" %]
                 [% st = "&#9650;" %]
             [% ELSIF NOT sort.id %]
