--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -187,6 +187,7 @@
         [% IF page == "data" AND viewtype == "graph" %]
             <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="/js/excanvas.min.js"></script><![endif]-->
             <script language="javascript" type="text/javascript" src="[% url.js %]/jquery.jqplot.min.js"></script>
+            <script language="javascript" type="text/javascript" src="[% url.js %]/jqplot/jqplot.highlighter.min.js"></script>
             <link rel="stylesheet" type="text/css" href="[% url.css %]/jquery.jqplot.min.css" />
             <script type="text/javascript" src="[% url.js %]/jqplot/jqplot.barRenderer.js"></script>
             <script type="text/javascript" src="[% url.js %]/jqplot/jqplot.donutRenderer.js"></script>
