Fix timeline edits for dateranges of only one day

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -26,7 +26,7 @@
                         return {
                             column: val.column,
                             from: val.start.toISOString().substring(0, 10),
-                            to:   val.end.toISOString().substring(0, 10)
+                            to:   (val.end || val.start).toISOString().substring(0, 10)
                         };
                     }
                 );
